Fix channels tests for android 8.0